- Cleanups - Added ger translations

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -137,15 +137,24 @@ dialog.binderror=Der Netzwerk Port is bereits belegt
 dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 dialog.connection_problem=Verbindungsproblem
-##dialog.customsync.autodownloadfromfriends=Autodownload from friends
-##dialog.customsync.autodownloadfromother=Autodownload from others
-##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
-##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
-##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
-##dialog.customsync.syncprofilescombo=Default synchronization profile
-##dialog.customsync.text=Select default and / or customize synchronization profile
-##dialog.customsync.title=Choose synchronisation profile
+dialog.customsync.autodownloadfromfriends=Autmatischer Download von Freunden
+dialog.customsync.autodownloadfromother=Automatischer Download von Anderen
+dialog.customsync.changedetection_disabled=\u00c4nderungen werden nicht erkannt
+dialog.customsync.minutesbetweenscans=Zeit zwischen der Suche nach \u00c4nderungen
+dialog.customsync.syncdeletionwithfriends=Dateil\u00f6schungen von Freunden \u00fcbernehmen
+dialog.customsync.syncdeletionwithothers=Dateil\u00f6schungen von Anderen \u00fcbernehmen
+dialog.customsync.syncprofilescombo=Standart Synchronizationsprofile
+dialog.customsync.text=W\u00e4hlen Sie ein Profil aus oder passen Sie es an 
+dialog.customsync.title=W\u00e4hlen Sie das Sync Profil
+dialog.directorychooser.new.description=Neues Verzeichnis
+dialog.directorychooser.new.exists={0}\nexistiert bereits
+dialog.directorychooser.new.key=N
+dialog.directorychooser.new.name=Neu
+dialog.directorychooser.new.problem=Problem w\u00e4hrend des Erstellens\:\n{0}
+##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+dialog.directorychooser.title=Verzeichnis ausw\u00e4hlen
 dialog.fatalerror.title=Schwerer Fehler
+dialog.newdirectorycreator.text=Bitte geben Sie den Namen des Unterverzeichnis an\n{0}
 dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
@@ -156,8 +165,6 @@ dialog.unable_to_connect_to_address=Kann nicht zu {0} verbinden
 dialog.unable_to_connect_to_member=Kann nicht zu {0} verbinden
 dialog.unable_to_open_port=Kann Netwerk Port {0} nicht \u00f6ffnen, PowerFolder k\u00f6nnte bereits laufen
 dialog.updatecheck.developmentversion.optionrestart=Neustart
-dialog.updatecheck.developmentversion.text=\nEine neue Entwicklungsversion wurde heruntergeladen\n\n - Buildzeiten -\nDiese version\: {0}\nNeue version\: {1}\n\nBitte starten Sie PowerFolder jetzt neu\n
-dialog.updatecheck.developmentversion.title=Neue Entwicklungsversion
 dialog.updatecheck.downloadAndUpdate=Jetzt herunterladen und aktualisieren
 dialog.updatecheck.failed.text=Update fehlgeschlagen. Bitte \u00fcberpr\u00fcfen Sie Ihre Internetverbindung.\n \nPowerFolder Pro\: Bitte \u00fcberpr\u00fcfen Sie auch die Benutzerdaten Ihres Update-Service Accounts unter\nEinstellungen/Pro Einstellungen/PowerFolder Pro Loader.
 dialog.updatecheck.failed.title=Update fehlgeschlagen
@@ -340,8 +347,8 @@ folderpanel.hometab.synchronisation_eta=Synchronisation fertig in
 folderpanel.hometab.synchronisation_percentage=Synchronisation
 folderpanel.hometab.title=Info
 folderpanel.hometab.total_size=Gr\u00f6sse (Total)
-##folderpanel.hometab.working.description=The folder is being moved
-##folderpanel.hometab.working.title=Moving folder
+folderpanel.hometab.working.description=Dieser Folder wird verschoben
+folderpanel.hometab.working.title=Verschiebe
 folderpanel.settingstab.add_a_pattern.example=beispiel/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Geben Sie ein Muster f\u00fcr den Ausschluss von Dateien an
 folderpanel.settingstab.add_a_pattern.title=Muster hinzuf\u00fcgen
@@ -395,6 +402,7 @@ general.cancel=Abbrechen
 general.cancel.key=A
 general.days={0} Tage
 general.description=Beschreibung
+general.directory=Verzeichnis
 general.disconnected=Nicht verbunden
 general.downloads=Downloads
 general.estimatedsize=gesch\u00e4tzte Gr\u00f6\u00dfe
@@ -431,12 +439,11 @@ general.synchonisation=Synchronisation
 general.syncprofile=Synchronisationsmodus
 general.time=%02d\:%02d\:%02d
 general.today=Heute
-##general.transfer.problem=Transfer Problem
-##general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=Benutzer
 general.visibility=Modus
 general.webservice=Online Speicher
+general.whatisthis=Was ist das?
 general.yesterday=Gestern
 
 hideoffline.description=Es werden nur Benutzer angezeigt, die gerade online sind 
@@ -533,8 +540,8 @@ navtree.onlinenodes=Verbundene Benutzer ({0})
 navtree.recyclebin_size=Papierkorb ({0})
 navtree.title=Navigation
 
-##networkstatisticspanel.connected_users=Connected users
-##networkstatisticspanel.known_users=Known users
+networkstatisticspanel.connected_users=Verbundene Computer
+networkstatisticspanel.known_users=Bekannte Computer
 ##networkstatisticspanel.local_folder_count=Number of local folders (joined)
 ##networkstatisticspanel.local_folders_size=Total size of all local files
 ##networkstatisticspanel.number_of_local_files=Total number of local files
@@ -606,10 +613,10 @@ preferences.dialog.bind.tooltip=W\u00e4hlt das Netwerkinterface aus, die PowerFo
 preferences.dialog.bindDescr=Beschreibung
 preferences.dialog.colortheme=PowerFolder Thema
 preferences.dialog.createdesktopshortcuts=Link auf dem Desktop anlegen
-##preferences.dialog.debugReports=Enable debug reports
-##preferences.dialog.deleteemptydirs=Delete empty directories
-##preferences.dialog.deltasync=Use delta sync
-##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
+preferences.dialog.debugReports=Debug logs einschalten
+preferences.dialog.deleteemptydirs=Leere Verzeichnisse entfernen
+preferences.dialog.deltasync=Delta Sync verwenden
+preferences.dialog.deltasync.tooltip=Synchronisiert nur Datei\u00e4nderungen
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht. 
 preferences.dialog.dialogs.check_for_program_updates=Nach PowerFolder Programmupdates suchen
 preferences.dialog.dialogs.title=Dialoge
@@ -669,14 +676,18 @@ preferences.dialog.showpreviewpanel=Grafik Vorschau aktivieren
 preferences.dialog.silentthrottle=Leitungsgeschwindigkeit im Ruhemodus
 preferences.dialog.silentthrottle.tooltip=Verringerung der Leitungsgeschwindingkeit im Ruhemodus
 preferences.dialog.smalltoolbar=Toolbar\: Kleine Symbole anzeigen
-preferences.dialog.startwithwindows=PowerFolder beim Windows Start ausf\u00fchren
+preferences.dialog.startPanel=Startansicht
+preferences.dialog.startPanel.downloads=Downloads
+preferences.dialog.startPanel.myFolders=Meine Folder
+preferences.dialog.startPanel.overview=\u00dcbersicht
+preferences.dialog.startwithwindows=PowerFolder mit Windows starten
 preferences.dialog.statusCantResolve=DynDns {0}\: nicht erreichbar\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} erfolgreich \u00fcberpr\u00fcft\!
 preferences.dialog.statusValidFailed=DynDns {0}\: \u00dcberpr\u00fcfung fehlgeschlagen\!
 preferences.dialog.statusWaitDynDns=Bitte warten Sie, w\u00e4hrend DynDns {0} \u00fcberpr\u00fcft wird\!
 preferences.dialog.title=Einstellungen
 preferences.dialog.titleProcessing=Arbeite...
-preferences.dialog.userecyclebin=Papierkorb verwenden (Standarteinstellung)
+preferences.dialog.userecyclebin=Papierkorb verwenden
 preferences.dialog.useziponlan=ZIP Kompression im LAN verwenden 
 preferences.dialog.useziponlan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN \u00dcbertragungen aktiviert werden soll.
 preferences.dialog.verbose=Debug logging aktivieren
@@ -727,7 +738,8 @@ publicfolders.size=Gr\u00f6\u00dfe
 quickinfo.download.active={0} aktive Download(s)
 quickinfo.download.completed={0} Download(s) k\u00fcrzlich fertiggestellt
 quickinfo.download.title=Download \u00dcbersicht
-##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
+quickinfo.folder.disconnected=Kein anderer Computer verbunden
+quickinfo.folder.downloads_recently_completed={0} Downloads k\u00fcrzlich fertigestellt
 quickinfo.folder.is_in_sync=Folder ist synchronisiert
 quickinfo.folder.is_synchronizing=Folder wird synchronisiert...
 quickinfo.folder.number_of_files_and_size={0} Dateien, {1}
@@ -747,8 +759,6 @@ quickinfo.root.insync=Alle Folder sind synchronisiert
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Synchronisation aktiv...
 quickinfo.root.title=Willkommen bei PowerFolder\!
-##quickinfo.transfer.problems.detected={0} problem(s) recently detected
-##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} aktive Upload(s)
 quickinfo.upload.title=Upload \u00dcbersicht
 quickinfo.user.isconnectedinet=ist im Internet
@@ -757,6 +767,7 @@ quickinfo.user.isdiconnected=ist nicht verbunden
 quickinfo.user.secureconnected=Die Verbindung ist sicher
 quickinfo.webservice.connected=Verbunden mit dem Online Speicher
 quickinfo.webservice.foldersmirrored={0} von {1} Folder werden gesichert
+quickinfo.webservice.notavailable=Online Speicher im nur LAN Modus nicht verf\u00fcgbar
 quickinfo.webservice.notconnected=Nicht mit dem Online Speicher verbunden
 quickinfo.webservice.notsetup=Online Speicher noch nicht eingerichtet
 quickinfo.webservice.title=PowerFolder Online Speicher
@@ -862,19 +873,15 @@ statusbar.synchronizing=Synchronisiere...
 synchronisation.notice.title=Synchronisationsprofil {0} eingestellt
 synchronisation.warning.automatic_deletions=Dieses Profil synchronisiert auch Dateil\u00f6schungen\!\nForfahren?
 synchronisation.warning.automatic_deletions_notice=Dieses Profil synchronisiert auch Dateil\u00f6schungen\!
-##synchronisation.warning.automatic_download=This mode will automatically download files\!\nContinue ?
 synchronisation.warning.explanation=Sie haben das Synchronisationsprofil '{0}' f\u00fcr Folder {1} eingestellt.
 synchronisation.warning.title=Synchronisationsprofil {0} f\u00fcr {1} eingestellt
 
-syncprofile.autodownload_all.name=Automatischer Download (Alles)
-syncprofile.autodownload_friends.name=Automatischer Download (von Freunden)
+syncprofile.autodownload_all.name=Automatischer Download
 syncprofile.backupsource.name=Backup (Quelle)
 syncprofile.backuptarget.name=Backup (Ziel)
 syncprofile.custom.name=Eigene...
-syncprofile.leecher.name=Torrent Downloader
-syncprofile.leechreleaser.name=Torrent Releaser
 syncprofile.manualdownload.name=Manueller Download
-syncprofile.projectwork.name=Projektarbeit
+syncprofile.projectwork.name=Projektarbeit (Manuell Syncen)
 syncprofile.syncpcs.name=Spiegeln
 
 systemservice.options.info1=Mit diese Option installieren/deinstallieren 
@@ -897,7 +904,7 @@ systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Freunde
 title.my.folders=Meine Folder 
-##title.network.statistics=Network Statistics
+title.network.statistics=Netzwerk Statistiken
 title.public.folder=\u00d6ffentlicher Folder
 title.public.folders=\u00d6ffentliche Folder
 title.search.users=Benutzer suchen
@@ -907,13 +914,13 @@ title.search.users=Benutzer suchen
 ##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
 ##transfer.problem.general.exception=There was an Exception\: {0}
 ##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
-##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.invalid.part=Received invalid part request
 ##transfer.problem.io.exception=Unable to read/write\: {0}
 ##transfer.problem.md5.error=There was an MD5-Hash error
 ##transfer.problem.old.upload=Already received download request from {0}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
-##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
-##transfer.problem.temp.file.write=Unable to write to tempfile {0}
+##transfer.problem.temp.file.delete=Unable to remove broken tempfile
+##transfer.problem.temp.file.open=Unable to create/open tempfile
+##transfer.problem.temp.file.write=Unable to write to tempfile
 ##transfer.problem.title=File Transfer Problem
 ##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
@@ -979,6 +986,8 @@ wizard.projectsync.successjoin=Sie sind dem Projekt erfolgreich beigetreten\!
 wizard.projectsync.takepartsync=An einer Projektsynchronisation teilnehmen
 wizard.projectsync.title=Projekt Synchronisation
 wizard.sendinvitations.additionaltext=Zusatzinformation
+wizard.sendinvitations.invitationtext=Ihre Nachricht an den Empf\u00e4nger
+##wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.joinsync=Eine Einladungsdatei wird ben\u00f6tigt um an einer Spiegelung teilzunehmen
 wizard.sendinvitations.neveruntrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
 wizard.sendinvitations.offline=Nicht verbunden
