--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -139,13 +139,22 @@ dialog.connect.connecting_to=Verbinden met {0}...
 dialog.connection_problem=Verbindingsprobleem
 ##dialog.customsync.autodownloadfromfriends=Autodownload from friends
 ##dialog.customsync.autodownloadfromother=Autodownload from others
-##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.changedetection_disabled=Change detection disabled
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection
 ##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 ##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 ##dialog.customsync.syncprofilescombo=Default synchronization profile
 ##dialog.customsync.text=Select default and / or customize synchronization profile
 ##dialog.customsync.title=Choose synchronisation profile
+##dialog.directorychooser.new.description=New directory
+##dialog.directorychooser.new.exists={0}\nalready exists
+##dialog.directorychooser.new.key=N
+##dialog.directorychooser.new.name=New
+##dialog.directorychooser.new.problem=There was a problem creating\n{0}
+##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+##dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Fatale Fout
+##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.synchronization.choose=Kies uw sync actie op
 dialog.synchronization.receive_changes=Ontvang veranderingen
 dialog.synchronization.send_and_receive_changes=Verzend en ontvang veranderingen
@@ -156,8 +165,6 @@ dialog.unable_to_connect_to_address=Kan niet verbinden met {0}
 dialog.unable_to_connect_to_member=Kan niet verbinden met {0}
 dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is misschien al gestart?
 dialog.updatecheck.developmentversion.optionrestart=Opnieuw starten
-dialog.updatecheck.developmentversion.text=\nEen nieuwe ontwikkel versie van PowerFolder is gedownload.\n\n"- Gemaakt op/om -\nDeze versie\: {0}\nNieuwe versie\: {1}\n\nStart Powerfolder opnieuw.\n
-dialog.updatecheck.developmentversion.title=Nieuwe ontwikkel versie
 dialog.updatecheck.downloadAndUpdate=Download en nu actualiseren?
 dialog.updatecheck.failed.text=Update mislukt. Check uw Internet verbinding.\n \nPowerFolder Pro\: Check aub ook uw update service abbonement onder\nInstellingen/Pro Instellingen/PowerFolder Pro Loader.
 dialog.updatecheck.failed.title=Update mislukt
@@ -395,6 +402,7 @@ general.cancel=Annuleren
 general.cancel.key=A 
 general.days={0} dagen
 general.description=Beschrijving
+##general.directory=Directory
 general.disconnected=Niet verbonden
 general.downloads=Downloads
 general.estimatedsize=Geschatte omvang
@@ -431,12 +439,11 @@ general.synchonisation=Synchronisatie
 general.syncprofile=Sync profiel
 general.time=%02d\:%02d\:%02d
 general.today=gisteren
-##general.transfer.problem=Transfer Problem
-##general.transfer.problems=Transfer Problems
 general.uploads=Uploads
 general.user=User
 general.visibility=Toegankelijkheid
 general.webservice=Online Opslag
+##general.whatisthis=What is this?
 general.yesterday=vandaag
 
 hideoffline.description=De niet verbonden gebruikers worden verborgen 
@@ -669,6 +676,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>U kunt de interne foto p
 preferences.dialog.silentthrottle=Passive mode bandbreedte beperking 
 preferences.dialog.silentthrottle.tooltip=Zet het bandbreedte gebruik percentage in passive mode (werkt alleen voor een limiet anders dan 0)
 preferences.dialog.smalltoolbar=Gebruik kleine menu iconen
+##preferences.dialog.startPanel=Start panel
+##preferences.dialog.startPanel.downloads=Downloads
+##preferences.dialog.startPanel.myFolders=My Folders
+##preferences.dialog.startPanel.overview=Overview
 preferences.dialog.startwithwindows=Start PowerFolder met Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: kan niet worden gevonden\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} controle gelukt\!
@@ -727,6 +738,7 @@ publicfolders.size=Grootte
 quickinfo.download.active={0} actieve download(s)
 quickinfo.download.completed={0} download(s) recent voltooid
 quickinfo.download.title=Download status
+##quickinfo.folder.disconnected=No other computer connected
 ##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is gesynchronizeerd
 quickinfo.folder.is_synchronizing=Folder is aan het synchronizeren...
@@ -747,8 +759,6 @@ quickinfo.root.insync=Alle Folders zijn gesynchroniseerd
 quickinfo.root.offline=Niet verbonden
 quickinfo.root.syncing=Bezig met synchroniseren...
 quickinfo.root.title=Welkom by PowerFolder\!
-##quickinfo.transfer.problems.detected={0} problem(s) recently detected
-##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} actieve upload(s)
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is op het Internet
@@ -757,6 +767,7 @@ quickinfo.user.isdiconnected=Is niet verbonden
 quickinfo.user.secureconnected=versleuteld verbonden
 ##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 quickinfo.webservice.foldersmirrored=Backup van {0} van de {1} Folder(s) worden gemaakt
+##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 ##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
 ##quickinfo.webservice.notsetup=Online Storage not configured yet
 ##quickinfo.webservice.title=PowerFolder Online Storage
@@ -862,17 +873,13 @@ statusbar.synchronizing=Synchronizeren...
 synchronisation.notice.title=Gekozen synchronisatieprofiel {0}
 synchronisation.warning.automatic_deletions=Deze mode zal automatisch bestandsverwijderingen synchroniseren\!\nDoorgaan ?
 synchronisation.warning.automatic_deletions_notice=Deze mode zal ook bestand verwijderingen synchroniseren\!
-synchronisation.warning.automatic_download=Deze mode zal automatisch bestanden downloaden\!\nDoorgaan ?
 synchronisation.warning.explanation=U heeft synchronisatie profiel '{0}' gekozen voor folder {1}.
 synchronisation.warning.title=Activeer synchronisatieprofiel {0} voor {1}
 
 syncprofile.autodownload_all.name=Automatisch downloaden (van iedereen)
-syncprofile.autodownload_friends.name=Automatisch downloaden (van vrienden)
 syncprofile.backupsource.name=Backup (Bron)
 syncprofile.backuptarget.name=Backup (Doel)
 syncprofile.custom.name=Aangepast...
-syncprofile.leecher.name=Torrent downloader
-syncprofile.leechreleaser.name=Verspreidt Torrents
 syncprofile.manualdownload.name=Download op verzoek
 syncprofile.projectwork.name=Project
 syncprofile.syncpcs.name=Exacte kopie
@@ -907,13 +914,13 @@ title.search.users=Zoek gebruikers
 ##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
 ##transfer.problem.general.exception=There was an Exception\: {0}
 ##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
-##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.invalid.part=Received invalid part request
 ##transfer.problem.io.exception=Unable to read/write\: {0}
 ##transfer.problem.md5.error=There was an MD5-Hash error
 ##transfer.problem.old.upload=Already received download request from {0}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
-##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
-##transfer.problem.temp.file.write=Unable to write to tempfile {0}
+##transfer.problem.temp.file.delete=Unable to remove broken tempfile
+##transfer.problem.temp.file.open=Unable to create/open tempfile
+##transfer.problem.temp.file.write=Unable to write to tempfile
 ##transfer.problem.title=File Transfer Problem
 ##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
@@ -927,11 +934,11 @@ transfers.local=Lokaal
 transfers.pending=Later
 transfers.progress=Voortgang
 transfers.queued=in wachtrij
-##transfers.remotehashing=Waiting for requests
+##transfers.remotehashing=Preparing
 transfers.requested=in wachtrij
 transfers.searching=Zoeken...
 transfers.to=Naar
-##transfers.verifying=Verifying sync
+##transfers.verifying=Finalizing
 
 unignorefile.description=Bestand zal weer worden gedownload/gedeeld
 unignorefile.key=l
@@ -979,6 +986,8 @@ wizard.projectsync.successjoin=U bent nu lid van het project
 wizard.projectsync.takepartsync=Neem deel in een project synchronisatie
 wizard.projectsync.title=Project synchronisatie
 wizard.sendinvitations.additionaltext=Verdere Informatie
+##wizard.sendinvitations.invitationtext=Enter a message for the receiver
+##wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.joinsync=Invitatie bestanden zijn verplicht om lid te worden van een "exacte kopie" 
 wizard.sendinvitations.neveruntrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
 wizard.sendinvitations.offline=Niet verbonden
