--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -139,13 +139,22 @@ dialog.connect.connecting_to=\u0421\u043e\u0435\u0434\u0438\u043d\u044f\u0435\u0
 dialog.connection_problem=\u041f\u0440\u043e\u0431\u043b\u0435\u043c\u0430 \u0441\u043e\u0435\u0434\u0438\u043d\u044f\u043d\u0438\u044f
 dialog.customsync.autodownloadfromfriends=\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u0442\u044c \u0443 \u0434\u0440\u0443\u0437\u0435\u0439
 dialog.customsync.autodownloadfromother=\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u0442\u044c \u0443 \u0432\u0441\u0435\u0445
+##dialog.customsync.changedetection_disabled=Change detection disabled
 dialog.customsync.minutesbetweenscans=(\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u043e) \u043c\u0438\u043d\u0443\u0442 \u0434\u043e \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u0435\u043d\u0438\u044f \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u0439 
 dialog.customsync.syncdeletionwithfriends=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0443\u0434\u0430\u043b\u0435\u043d\u043d\u044b\u0435 \u0441 \u0434\u0440\u0443\u0437\u044c\u044f\u043c\u0438
 dialog.customsync.syncdeletionwithothers=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0443\u0434\u0430\u043b\u0435\u043d\u043d\u044b\u0435 \u0441\u043e \u0432\u0441\u0435\u043c\u0438
 dialog.customsync.syncprofilescombo=\u041f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 \u043f\u043e \u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e
 dialog.customsync.text=\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u043f\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u044b\u0439 \u0438 / \u0438\u043b\u0438 \u043d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 dialog.customsync.title=\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
+##dialog.directorychooser.new.description=New directory
+##dialog.directorychooser.new.exists={0}\nalready exists
+##dialog.directorychooser.new.key=N
+##dialog.directorychooser.new.name=New
+##dialog.directorychooser.new.problem=There was a problem creating\n{0}
+##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+##dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=\u041a\u0440\u0438\u0442\u0438\u0447\u0435\u0441\u043a\u0430\u044f \u043e\u0448\u0438\u0431\u043a\u0430
+##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.synchronization.choose=\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0440\u0435\u0436\u0438\u043c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 dialog.synchronization.receive_changes=\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f
 dialog.synchronization.send_and_receive_changes=\u041e\u0442\u043e\u0441\u043b\u0430\u0442\u044c \u0438 \u043f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f
@@ -156,8 +165,6 @@ dialog.unable_to_connect_to_address=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u
 dialog.unable_to_connect_to_member=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u0441\u043e\u0435\u0434\u0438\u043d\u0438\u0442\u044c\u0441\u044f \u043a {0}
 dialog.unable_to_open_port=\u041d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u043e\u0442\u043a\u0440\u044b\u0442\u044c \u043f\u043e\u0440\u0442 {0}, \u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e PowerFolder \u0443\u0436\u0435 \u0437\u0430\u043f\u0443\u0449\u0435\u043d
 dialog.updatecheck.developmentversion.optionrestart=\u041f\u0435\u0440\u0435\u0437\u0430\u043f\u0443\u0441\u043a
-dialog.updatecheck.developmentversion.text=\n\u041d\u043e\u0432\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f PowerFolder \u0441\u043a\u0430\u0447\u0435\u043d\u0430.\n\n - \u0414\u0430\u0442\u0430 \u0432\u044b\u0445\u043e\u0434\u0430 -\n\u042d\u0442\u0430 \u0432\u0435\u0440\u0441\u0438\u044f\: {0}\n\u041d\u043e\u0432\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f\: {1}\n\n\u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043f\u0435\u0440\u0435\u0441\u0442\u0430\u0440\u0442\u0443\u0439\u0442\u0435 PowerFolder.\n
-dialog.updatecheck.developmentversion.title=\u041d\u043e\u0432\u0430\u044f \u0432\u0435\u0440\u0441\u0438\u044f
 dialog.updatecheck.downloadAndUpdate=\u0421\u043a\u0430\u0447\u0430\u0442\u044c \u0438 \u043e\u0431\u043d\u043e\u0432\u0438\u0442\u044c
 dialog.updatecheck.failed.text=\u041e\u0448\u0438\u0431\u043a\u0430 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f. \u041f\u0440\u043e\u0432\u0435\u0440\u044c\u0442\u0435, \u043f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u0430\u0448\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435 \u0441 \u0438\u043d\u0442\u0435\u0440\u043d\u0435\u0442.\n \nPowerFolder Pro\: \u0422\u0430\u043a\u0436\u0435 \u043f\u0440\u043e\u0432\u0435\u0440\u044c\u0442\u0435 \u0432\u0430\u0448 \u0430\u043a\u043a\u0430\u0443\u043d\u0442 \u0421\u043b\u0443\u0436\u0431\u044b \u041e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0439 \u0447\u0435\u0440\u0435\u0437\n\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438/\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 Pro \u0432\u0435\u0440\u0441\u0438\u0438/\u0417\u0430\u0433\u0440\u0443\u0437\u0447\u0438\u043a PowerFolder Pro.
 dialog.updatecheck.failed.title=\u041e\u0448\u0438\u0431\u043a\u0430 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f
@@ -395,6 +402,7 @@ general.cancel=\u041e\u0442\u043c\u0435\u043d\u0430
 general.cancel.key=C
 general.days={0} \u0434\u043d\u0435\u0439
 general.description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
+##general.directory=Directory
 general.disconnected=\u041e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
 general.downloads=\u0421\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u044f
 general.estimatedsize=\u043f\u0440\u0438\u043c\u0435\u0440\u043d\u044b\u0439 \u0440\u0430\u0437\u043c\u0435\u0440
@@ -431,12 +439,11 @@ general.synchonisation=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0
 general.syncprofile=\u0420\u0435\u0436\u0438\u043c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438
 general.time=%02d\:%02d\:%02d
 general.today=\u0441\u0435\u0433\u043e\u0434\u043d\u044f
-general.transfer.problem=\u041f\u0440\u043e\u0431\u043b\u0435\u043c\u0430 \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0438
-general.transfer.problems=\u041f\u0440\u043e\u043b\u0435\u043c\u044b \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0438
 general.uploads=\u0417\u0430\u0433\u0440\u0443\u0437\u043a\u0438
 general.user=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c
 general.visibility=\u0420\u0435\u0436\u0438\u043c
 general.webservice=\u041e\u043d\u043b\u0430\u0439\u043d \u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435
+##general.whatisthis=What is this?
 general.yesterday=\u0432\u0447\u0435\u0440\u0430
 
 hideoffline.description=\u041d\u0435 \u043f\u043e\u043a\u0430\u0437\u044b\u0432\u0430\u0442\u044c \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439 \u043d\u0435 \u0432 \u0441\u0435\u0442\u0438
@@ -669,6 +676,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u0412\u044b \u043d\u043
 preferences.dialog.silentthrottle=\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u043a\u043e\u0440\u043e\u0441\u0442\u044c \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f
 preferences.dialog.silentthrottle.tooltip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0443\u044e \u0441\u043a\u043e\u0440\u043e\u0441\u0442\u044c \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f (\u0440\u0430\u0431\u043e\u0442\u0430\u0435\u0442 \u0435\u0441\u043b\u0438 \u0447\u0438\u0441\u043b\u043e \u0431\u043e\u043b\u044c\u0448\u0435 0)
 preferences.dialog.smalltoolbar=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u044c \u043c\u0430\u043b\u0435\u043d\u044c\u043a\u0438\u0435 \u0437\u043d\u0430\u0447\u043a\u0438 \u043d\u0430 \u043f\u0430\u043d\u0435\u043b\u0438 \u0438\u043d\u0441\u0442\u0440\u0443\u043c\u0435\u043d\u0442\u043e\u0432
+##preferences.dialog.startPanel=Start panel
+##preferences.dialog.startPanel.downloads=Downloads
+##preferences.dialog.startPanel.myFolders=My Folders
+##preferences.dialog.startPanel.overview=Overview
 preferences.dialog.startwithwindows=\u0417\u0430\u043f\u0443\u0441\u043a\u0430\u0442\u044c PowerFolder \u0432\u043c\u0435\u0441\u0442\u0435 \u0441 Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: \u043d\u0435 \u0434\u043e\u0441\u0442\u0443\u043f\u0435\u043d\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u043f\u0440\u043e\u0432\u0435\u0440\u0435\u043d\!
@@ -727,6 +738,7 @@ publicfolders.size=\u0420\u0430\u0437\u043c\u0435\u0440
 quickinfo.download.active={0} \u0430\u043a\u0442\u0438\u0432\u043d\u044b\u0445 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0439
 quickinfo.download.completed={0} \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0439 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 quickinfo.download.title=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0439
+##quickinfo.folder.disconnected=No other computer connected
 quickinfo.folder.downloads_recently_completed={0} \u0417\u0430\u043a\u0430\u0447\u0435\u043a \u043d\u0435\u0434\u0430\u0432\u043d\u043e \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 quickinfo.folder.is_in_sync=\u041f\u0430\u043f\u043a\u0430 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u043d\u0430
 quickinfo.folder.is_synchronizing=\u041f\u0430\u043f\u043a\u0430 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f...
@@ -747,8 +759,6 @@ quickinfo.root.insync=\u0412\u0441\u0435 \u041f\u0430\u043f\u043a\u0438 \u0441\u
 quickinfo.root.offline=\u041d\u0435 \u0432 \u0441\u0435\u0442\u0438
 quickinfo.root.syncing=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u044f \u0432\u044b\u043f\u043e\u043b\u043d\u044f\u0442\u0441\u044f...
 quickinfo.root.title=\u0414\u043e\u0431\u0440\u043e \u041f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c \u0432 PowerFolder\!
-quickinfo.transfer.problems.detected={0} \u043f\u0440\u043e\u0431\u043b\u0435\u043c \u043d\u0435\u0434\u0430\u0432\u043d\u043e \u043e\u0431\u043d\u0430\u0440\u0443\u0436\u0435\u043d\u043e
-quickinfo.transfer.problems.title=\u0421\u0442\u0430\u0442\u0443\u0441 \u043f\u0440\u043e\u0431\u043b\u0435\u043c \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0438
 quickinfo.upload.active={0} \u0430\u043a\u0442\u0438\u0432\u043d\u044b\u0445 \u0437\u0430\u0433\u0440\u0443\u0437\u043e\u043a
 quickinfo.upload.title=\u0421\u0442\u0430\u0442\u0443\u0441 \u0437\u0430\u0433\u0440\u0443\u0437\u043e\u043a
 quickinfo.user.isconnectedinet=\u0412 \u0441\u0435\u0442\u0438 Internet
@@ -757,6 +767,7 @@ quickinfo.user.isdiconnected=\u041e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
 quickinfo.user.secureconnected=\u0431\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0435 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0435
 quickinfo.webservice.connected=\u0421\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u043e \u0441 \u041e\u043d\u043b\u0430\u0439\u043d-\u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435\u043c PowerFolder
 quickinfo.webservice.foldersmirrored=\u0414\u043b\u044f {0} \u0438\u0437 {1} \u043f\u0430\u043f\u043e\u043a \u0441\u043e\u0437\u0434\u0430\u043d\u044b \u0440\u0435\u0437\u0435\u0440\u0432\u043d\u044b\u0435 \u043a\u043e\u043f\u0438\u0438
+##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.notconnected=\u0420\u0430\u0441\u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u043e \u0441 \u041e\u043d\u043b\u0430\u0439\u043d-\u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435\u043c PowerFolder
 quickinfo.webservice.notsetup=\u041e\u043d\u043b\u0430\u0439\u043d-\u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435 \u0435\u0449\u0435 \u043d\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0435\u043d\u043e
 quickinfo.webservice.title=\u041e\u043d\u043b\u0430\u0439\u043d-\u0425\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0435 PowerFolder
@@ -862,17 +873,13 @@ statusbar.synchronizing=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u
 synchronisation.notice.title=\u0410\u043a\u0442\u0438\u0432\u043d\u044b\u0439 \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 {0}
 synchronisation.warning.automatic_deletions=\u042d\u0442\u043e\u0442 \u0440\u0435\u0436\u0438\u043c \u0442\u0430\u043a \u0436\u0435 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u044f\!\n\u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c ?
 synchronisation.warning.automatic_deletions_notice=\u042d\u0442\u043e\u0442 \u0440\u0435\u0436\u0438\u043c \u0442\u0430\u043a \u0436\u0435 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442 \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u044f\!
-synchronisation.warning.automatic_download=\u042d\u0442\u043e\u0442 \u0440\u0435\u0436\u0438\u043c \u0430\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u0435\u0442 \u0444\u0430\u0439\u043b\u044b\!\n\u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c ?
 synchronisation.warning.explanation=\u0412\u044b \u0432\u044b\u0431\u0440\u0430\u043b\u0438 \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 '{0}' \u0434\u043b\u044f \u043f\u0430\u043f\u043a\u0438 {1}.
 synchronisation.warning.title=\u0410\u043a\u0442\u0438\u0432\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043f\u0440\u043e\u0444\u0438\u043b\u044c \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 {0} \u0434\u043b\u044f {1}
 
 syncprofile.autodownload_all.name=\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u043e\u0435 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0435(\u0432\u0441\u0435)
-syncprofile.autodownload_friends.name=\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u043e\u0435 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0435(\u0434\u0440\u0443\u0437\u044c\u044f\u043c\u0438)
 syncprofile.backupsource.name=\u0420\u0435\u0437\u0435\u0440\u0432\u043d\u043e\u0435 \u043a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 (\u0418\u0441\u0442\u043e\u0447\u043d\u0438\u043a)
 syncprofile.backuptarget.name=\u0420\u0435\u0437\u0435\u0440\u0432\u043d\u043e\u0435 \u043a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 (\u0426\u0435\u043b\u044c)
 syncprofile.custom.name=\u041c\u043e\u0438...
-syncprofile.leecher.name=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u0430 \u0434\u043b\u044f \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u044f Torrent \u0444\u0430\u0439\u043b\u043e\u0432
-syncprofile.leechreleaser.name=\u0421\u043e\u0437\u0434\u0430\u0442\u0435\u043b\u044c \u0442\u043e\u0440\u0440\u0435\u043d\u0442\u0430
 syncprofile.manualdownload.name=\u0420\u0443\u0447\u043d\u043e\u0435 \u0441\u043a\u0430\u0447\u0438\u0432\u0430\u043d\u0438\u0435
 syncprofile.projectwork.name=\u041f\u0440\u043e\u0435\u043a\u0442
 syncprofile.syncpcs.name=\u0417\u0435\u0440\u043a\u0430\u043b\u043e
@@ -979,6 +986,8 @@ wizard.projectsync.successjoin=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d
 wizard.projectsync.takepartsync=\u041f\u0440\u0438\u043d\u044f\u0442\u044c \u0443\u0447\u0430\u0441\u0442\u0438\u044f \u0432 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u0438 \u043f\u0440\u043e\u0435\u043a\u0442\u0430
 wizard.projectsync.title=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0430\u0446\u0438\u044f
 wizard.sendinvitations.additionaltext=\u0414\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u0430\u044f \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044f
+##wizard.sendinvitations.invitationtext=Enter a message for the receiver
+##wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.joinsync=\u0424\u0430\u0439\u043b\u044b \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0439 \u043d\u0435\u043e\u0431\u0445\u043e\u0434\u0438\u043c\u044b \u0434\u043b\u044f \u0442\u043e\u0433\u043e, \u0447\u0442\u043e\u0431\u044b \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u0438\u0442\u044c\u0441\u044f \u043a \u0437\u0435\u0440\u043a\u0430\u043b\u0443.
 wizard.sendinvitations.neveruntrusted=\u041d\u0438\u043a\u043e\u0433\u0434\u0430 \u043d\u0435 \u0434\u0430\u0432\u0430\u0439\u0442\u0435 \u0444\u0430\u0439\u043b\u044b \u043f\u0440\u0438\u0433\u043b\u0430\u0448\u0435\u043d\u0438\u0439 \u043d\u0435\u043f\u0440\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u044b\u043c \u043b\u044e\u0434\u044f\u043c.
 wizard.sendinvitations.offline=\u041d\u0435 \u043f\u0440\u0438\u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d
