--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -139,13 +139,22 @@ dialog.connect.connecting_to=Ansluter till {0}...
 dialog.connection_problem=Anslutningsproblem
 ##dialog.customsync.autodownloadfromfriends=Autodownload from friends
 ##dialog.customsync.autodownloadfromother=Autodownload from others
-##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.changedetection_disabled=Change detection disabled
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection
 ##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 ##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 ##dialog.customsync.syncprofilescombo=Default synchronization profile
 ##dialog.customsync.text=Select default and / or customize synchronization profile
 ##dialog.customsync.title=Choose synchronisation profile
+##dialog.directorychooser.new.description=New directory
+##dialog.directorychooser.new.exists={0}\nalready exists
+##dialog.directorychooser.new.key=N
+##dialog.directorychooser.new.name=New
+##dialog.directorychooser.new.problem=There was a problem creating\n{0}
+##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+##dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Allvarligt fel
+##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.synchronization.choose=V\u00e4lj alternativ f\u00f6r synkronisering
 dialog.synchronization.receive_changes=Ta emot \u00e4ndringar
 dialog.synchronization.send_and_receive_changes=Publicera och ta emot \u00e4ndringar
@@ -156,8 +165,6 @@ dialog.unable_to_connect_to_address=Kan inte ansluta till {0}
 dialog.unable_to_connect_to_member=Kan inte ansluta till {0}
 dialog.unable_to_open_port=Kan inte ansluta till port {0}, PowerFolder kanske redan k\u00f6r
 dialog.updatecheck.developmentversion.optionrestart=Starta om
-dialog.updatecheck.developmentversion.text=\nEn ny utvecklingsversion av PowerFolder har laddats ner.\n\n - Skapad -\nDenna version\: {0}\nNy version\: {1}\n\nVar v\u00e4nlig starta om PowerFolder nu.\n
-dialog.updatecheck.developmentversion.title=Ny utvecklingsversion
 dialog.updatecheck.downloadAndUpdate=Ladda ner och uppdatera nu
 dialog.updatecheck.failed.text=Uppdatering misslyckades. Kontrollera internetkopplingen.\n \nPowerFolder Pro\: Kontrollera ocks\u00e5 ditt Uppdateringsservice konto under\nInst\u00e4llningar/Pro inst\u00e4llningar/PowerFolder Pro Loader
 dialog.updatecheck.failed.title=Uppdatering misslyckades
@@ -395,6 +402,7 @@ general.cancel=Avbryt
 general.cancel.key=A
 general.days={0} dagar
 general.description=Beskrivning
+##general.directory=Directory
 general.disconnected=Ej ansluten
 general.downloads=Nedladdningar
 general.estimatedsize=Uppskattad storlek
@@ -431,12 +439,11 @@ general.synchonisation=Synkronisering
 general.syncprofile=Synk profil
 general.time=%02d\:%02d\:%02d
 general.today=idag
-##general.transfer.problem=Transfer Problem
-##general.transfer.problems=Transfer Problems
 general.uploads=Uppladdningar
 general.user=Anv\u00e4ndare
 general.visibility=Synlighet
 ##general.webservice=Online Storage
+##general.whatisthis=What is this?
 general.yesterday=ig\u00e5r
 
 hideoffline.description=Endast anv\u00e4ndare som \u00e4r online visas i detta s\u00f6kresultat 
@@ -669,6 +676,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Du hittar f\u00f6rhandsg
 preferences.dialog.silentthrottle=Bandbredd i passiv mod 
 preferences.dialog.silentthrottle.tooltip=St\u00e4ll in bandbreddanv\u00e4ndning f\u00f6r passiv mod (Fungerar endast f\u00f6r v\u00e4rden st\u00f6rre \u00e4n 0)
 ##preferences.dialog.smalltoolbar=Use small toolbar icons
+##preferences.dialog.startPanel=Start panel
+##preferences.dialog.startPanel.downloads=Downloads
+##preferences.dialog.startPanel.myFolders=My Folders
+##preferences.dialog.startPanel.overview=Overview
 ##preferences.dialog.startwithwindows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDNS {0}\: Kan inte hittas\!
 preferences.dialog.statusDynDnsSuccess=DynDNS {0} kontroll lyckades\!
@@ -727,6 +738,7 @@ publicfolders.size=Storlek
 quickinfo.download.active={0} aktiva nedladdningar
 quickinfo.download.completed={0} nedladdningar nyligen klara
 quickinfo.download.title=Nedladdningsstatus
+##quickinfo.folder.disconnected=No other computer connected
 ##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Foldern \u00e4r synkroniserad
 quickinfo.folder.is_synchronizing=Foldern synkroniseras...
@@ -747,8 +759,6 @@ quickinfo.root.insync=Alla foldrar \u00e4r synkroniserade
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Synkroniserar...
 quickinfo.root.title=V\u00e4lkommen till PowerFolder\!
-##quickinfo.transfer.problems.detected={0} problem(s) recently detected
-##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active={0} aktiva uppladdningar
 quickinfo.upload.title=Uppladdningsstatus
 quickinfo.user.isconnectedinet=\u00c4r p\u00e5 Internet
@@ -757,6 +767,7 @@ quickinfo.user.isdiconnected=\u00c4r ej ansluten
 quickinfo.user.secureconnected=s\u00e4kert ansluten
 ##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 ##quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
+##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 ##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
 ##quickinfo.webservice.notsetup=Online Storage not configured yet
 ##quickinfo.webservice.title=PowerFolder Online Storage
@@ -862,17 +873,13 @@ statusbar.synchronizing=Synkroniserar...
 synchronisation.notice.title=Aktiverad synkronisationsprofile {0}
 synchronisation.warning.automatic_deletions=Denna mod synkroniserar \u00e4ven filborttagningar\!\nForts\u00e4tt ?
 synchronisation.warning.automatic_deletions_notice=Denna mod synkroniserar \u00e4ven filborttagningar\!
-synchronisation.warning.automatic_download=Denna mod laddar automatiskt ner filer\!\nForts\u00e4tt ?
 synchronisation.warning.explanation=Du har valt synkroniseringsprofil '{0}' f\u00f6r foldern {1}.
 synchronisation.warning.title=Aktivera synkroniseringsprofil {0} f\u00f6r {1}
 
 syncprofile.autodownload_all.name=Auto(alla)
-syncprofile.autodownload_friends.name=Auto(v\u00e4nner)
 ##syncprofile.backupsource.name=Backup (Source)
 ##syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Anpassad...
-syncprofile.leecher.name=Torrent nedladdning
-syncprofile.leechreleaser.name=Torrent uppladdning
 syncprofile.manualdownload.name=Manuell
 syncprofile.projectwork.name=Projektarbete
 ##syncprofile.syncpcs.name=Mirror
@@ -907,13 +914,13 @@ title.search.users=Hitta v\u00e4nner
 ##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
 ##transfer.problem.general.exception=There was an Exception\: {0}
 ##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
-##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.invalid.part=Received invalid part request
 ##transfer.problem.io.exception=Unable to read/write\: {0}
 ##transfer.problem.md5.error=There was an MD5-Hash error
 ##transfer.problem.old.upload=Already received download request from {0}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
-##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
-##transfer.problem.temp.file.write=Unable to write to tempfile {0}
+##transfer.problem.temp.file.delete=Unable to remove broken tempfile
+##transfer.problem.temp.file.open=Unable to create/open tempfile
+##transfer.problem.temp.file.write=Unable to write to tempfile
 ##transfer.problem.title=File Transfer Problem
 ##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
@@ -921,17 +928,17 @@ transfers.completed=klar
 ##transfers.copying=Copying data
 transfers.eta=Klar om
 transfers.from=Fr\u00e5n
-##transfers.hashing=Delta sync
+##transfers.hashing=Preparing
 transfers.kbs={0} KB/s
 transfers.local=lokal
 transfers.pending=V\u00e4ntar
 transfers.progress=F\u00f6rlopp
 transfers.queued=i k\u00f6
-##transfers.remotehashing=Waiting for requests
+##transfers.remotehashing=Preparing
 transfers.requested=beg\u00e4rd
 transfers.searching=S\u00f6ker...
 transfers.to=Till
-##transfers.verifying=Verifying sync
+##transfers.verifying=Finalizing
 
 unignorefile.description=Fil(er) kommer att laddas ner/delas igen
 unignorefile.key=A
@@ -979,6 +986,8 @@ wizard.projectsync.successjoin=Du har lyckats g\u00e5 med i projektet\!
 wizard.projectsync.takepartsync=Tag del i en synkronisering
 wizard.projectsync.title=Projekt synkronisering
 wizard.sendinvitations.additionaltext=Ytterligare information
+##wizard.sendinvitations.invitationtext=Enter a message for the receiver
+##wizard.sendinvitations.invitationtextsample=
 ##wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
 wizard.sendinvitations.neveruntrusted=Ge aldrig ut inbjudningsfiler till n\u00e5gon du inte litar p\u00e5.
 wizard.sendinvitations.offline=Ej ansluten
