--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -139,13 +139,22 @@ dialog.connect.connecting_to=\u8fde\u63a5\u5230 {0} \u2026\u2026
 dialog.connection_problem=\u8fde\u63a5\u95ee\u9898
 dialog.customsync.autodownloadfromfriends=\u4ece\u597d\u53cb\u5904\u81ea\u52a8\u4e0b\u8f7d
 dialog.customsync.autodownloadfromother=\u4ece\u5176\u4ed6\u4eba\u81ea\u52a8\u4e0b\u8f7d
+##dialog.customsync.changedetection_disabled=Change detection disabled
 dialog.customsync.minutesbetweenscans=\u68c0\u6d4b\u53d8\u5316\u7684\uff08\u6700\u5927\uff09\u5206\u949f\u6570
 dialog.customsync.syncdeletionwithfriends=\u540c\u6b65\u597d\u53cb\u7684\u5220\u9664\u64cd\u4f5c
 dialog.customsync.syncdeletionwithothers=\u540c\u6b65\u5176\u5b83\u4eba\u7684\u5220\u9664\u64cd\u4f5c
 dialog.customsync.syncprofilescombo=\u4f7f\u7528\u9ed8\u8ba4\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
 dialog.customsync.text=\u9009\u62e9\u9ed8\u8ba4\u548c/\u6216\u81ea\u5b9a\u4e49\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
 dialog.customsync.title=\u9009\u62e9\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
+##dialog.directorychooser.new.description=New directory
+##dialog.directorychooser.new.exists={0}\nalready exists
+##dialog.directorychooser.new.key=N
+##dialog.directorychooser.new.name=New
+##dialog.directorychooser.new.problem=There was a problem creating\n{0}
+##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+##dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=\u53d1\u751f\u4e25\u91cd\u9519\u8bef
+##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.synchronization.choose=\u8bf7\u9009\u62e9\u540c\u6b65\u65f6\u7684\u884c\u4e3a
 dialog.synchronization.receive_changes=\u63a5\u6536\u6539\u53d8
 dialog.synchronization.send_and_receive_changes=\u53d1\u9001\u5e76\u63a5\u6536\u6539\u53d8
@@ -156,8 +165,6 @@ dialog.unable_to_connect_to_address=\u4e0d\u80fd\u8fde\u63a5\u5230 {0}
 dialog.unable_to_connect_to_member=\u4e0d\u80fd\u8fde\u63a5\u5230 {0}
 dialog.unable_to_open_port=\u4e0d\u80fd\u6253\u5f00\u672c\u5730\u7aef\u53e3 {0} \uff0c\u53ef\u80fdPowerFolder\u5df2\u7ecf\u5728\u8fd0\u884c\u3002
 dialog.updatecheck.developmentversion.optionrestart=\u91cd\u542f
-dialog.updatecheck.developmentversion.text=\n\u5df2\u7ecf\u4e0b\u8f7dPowerFolder\u65b0\u7684\u5f00\u53d1\u7248\u672c\u3002\n\n - Buildtimes -\n\u5f53\u524d\u7248\u672c\: {0}\n\u65b0\u7248\u672c\: {1}\n\n\u8bf7\u7acb\u5373\u91cd\u65b0\u542f\u52a8PowerFolder\u3002\n
-dialog.updatecheck.developmentversion.title=\u65b0\u7684\u5f00\u53d1\u7248\u672c
 dialog.updatecheck.downloadAndUpdate=\u7acb\u5373\u4e0b\u8f7d\u5e76\u66f4\u65b0
 dialog.updatecheck.failed.text=\u5347\u7ea7\u5931\u8d25\u3002\u8bf7\u68c0\u67e5\u60a8\u7684\u7f51\u7edc\u8fde\u63a5\u3002\n \nPowerFolder \u4e13\u4e1a\u7248\uff1a\u8bf7\u540c\u65f6\u68c0\u67e5\u60a8\u7684\u5347\u7ea7\u670d\u52a1\u8d26\u53f7\uff0c\u5728\n\u8bbe\u7f6e/\u4e13\u4e1a\u7248\u8bbe\u7f6e/PowerFolder\u4e13\u4e1a\u7248\u52a0\u8f7d\u5668\u3002
 dialog.updatecheck.failed.title=\u5347\u7ea7\u5931\u8d25
@@ -395,6 +402,7 @@ general.cancel=\u53d6\u6d88
 general.cancel.key=C
 general.days={0} \u5929
 general.description=\u63cf\u8ff0
+##general.directory=Directory
 general.disconnected=\u65ad\u5f00\u8fde\u63a5
 general.downloads=\u4e0b\u8f7d
 general.estimatedsize=\u4f30\u8ba1\u5927\u5c0f
@@ -431,12 +439,11 @@ general.synchonisation=\u540c\u6b65
 general.syncprofile=\u540c\u6b65\u9009\u9879
 general.time=%02d\:%02d\:%02d
 general.today=\u4eca\u5929
-general.transfer.problem=\u4f20\u8f93\u95ee\u9898
-general.transfer.problems=\u4f20\u8f93\u95ee\u9898
 general.uploads=\u4e0a\u4f20
 general.user=\u7528\u6237
 general.visibility=\u516c\u5f00\u7a0b\u5ea6
 general.webservice=\u5728\u7ebf\u5b58\u50a8
+##general.whatisthis=What is this?
 general.yesterday=\u6628\u5929
 
 hideoffline.description=\u5728\u641c\u7d22\u7ed3\u679c\u4e2d\u8fc7\u6ee4\u5230\u79bb\u7ebf\u7528\u6237
@@ -669,6 +676,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u60a8\u53ef\u4ee5\u5728
 preferences.dialog.silentthrottle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf
 preferences.dialog.silentthrottle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
 preferences.dialog.smalltoolbar=\u4f7f\u7528\u5de5\u5177\u680f\u5c0f\u56fe\u6807
+##preferences.dialog.startPanel=Start panel
+##preferences.dialog.startPanel.downloads=Downloads
+##preferences.dialog.startPanel.myFolders=My Folders
+##preferences.dialog.startPanel.overview=Overview
 preferences.dialog.startwithwindows=\u968fWindows\u542f\u52a8PowerFolder
 preferences.dialog.statusCantResolve=\u52a8\u6001Dns {0}\uff1a\u4e0d\u80fd\u89e3\u6790\uff01
 preferences.dialog.statusDynDnsSuccess=\u52a8\u6001Dns {0} \u9a8c\u8bc1\u6210\u529f\uff01
@@ -727,6 +738,7 @@ publicfolders.size=\u5927\u5c0f
 quickinfo.download.active={0} \u4e2a\u6d3b\u8dc3\u4e0b\u8f7d
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u6210 {0} \u4e2a\u4e0b\u8f7d
 quickinfo.download.title=\u4e0b\u8f7d\u72b6\u6001
+##quickinfo.folder.disconnected=No other computer connected
 quickinfo.folder.downloads_recently_completed=, \u6700\u8fd1\u5b8c\u6210\u4e86{0} \u4e2a\u4e0b\u8f7d\u4efb\u52a1
 quickinfo.folder.is_in_sync=\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65
 quickinfo.folder.is_synchronizing=\u6b63\u5728\u540c\u6b65\u6587\u4ef6\u5939\u2026\u2026
@@ -747,8 +759,6 @@ quickinfo.root.insync=\u5df2\u540c\u6b65\u6240\u6709\u6587\u4ef6\u5939
 quickinfo.root.offline=\u79bb\u7ebf
 quickinfo.root.syncing=\u6b63\u5728\u540c\u6b65\u2026\u2026
 quickinfo.root.title=\u6b22\u8fce\u4f7f\u7528PowerFolder\uff01
-quickinfo.transfer.problems.detected=\u6700\u8fd1\u68c0\u6d4b\u5230{0} \u4e2a\u95ee\u9898
-quickinfo.transfer.problems.title=\u4f20\u8f93\u95ee\u9898\u72b6\u6001
 quickinfo.upload.active={0} \u4e2a\u6d3b\u8dc3\u4e0a\u4f20
 quickinfo.upload.title=\u4e0a\u4f20\u72b6\u6001
 quickinfo.user.isconnectedinet=\u4e92\u8054\u7f51
@@ -757,6 +767,7 @@ quickinfo.user.isdiconnected=\u672a\u8fde\u63a5
 quickinfo.user.secureconnected=\u5b89\u5168\u8fde\u63a5
 quickinfo.webservice.connected=\u8fde\u63a5\u5230PowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.foldersmirrored={1}\u4e2a \u6587\u4ef6\u5939\u7684{0}\u4e2a\u88ab\u5907\u4efd
+##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.notconnected=\u65ad\u5f00PowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.notsetup=\u8fd8\u6ca1\u6709\u914d\u7f6ePowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.title=\u5728\u7ebf\u5b58\u50a8 - \u7f51\u7edc\u670d\u52a1
@@ -862,17 +873,13 @@ statusbar.synchronizing=\u540c\u6b65\u4e2d...
 synchronisation.notice.title=\u6fc0\u6d3b\u540c\u6b65\u9009\u9879 {0}
 synchronisation.warning.automatic_deletions=\u6b64\u6a21\u5f0f\u4e5f\u4f1a\u540c\u6b65\u5220\u9664\u6587\u4ef6\uff01\u662f\u5426\u7ee7\u7eed\uff1f
 synchronisation.warning.automatic_deletions_notice=\u6b64\u6a21\u5f0f\u4e5f\u4f1a\u540c\u6b65\u5220\u9664\u6587\u4ef6\uff01
-synchronisation.warning.automatic_download=\u6b64\u6a21\u5f0f\u5c06\u81ea\u52a8\u4e0b\u8f7d\u6587\u4ef6\uff01\u662f\u5426\u7ee7\u7eed\uff1f
 synchronisation.warning.explanation=\u4f60\u5df2\u7ecf\u4e3a\u6587\u4ef6\u5939 {1} \u9009\u62e9\u540c\u6b65\u9009\u9879 '{0}' \u3002
 synchronisation.warning.title=\u6fc0\u6d3b\u6587\u4ef6\u5939 {1} \u7684\u540c\u6b65\u9009\u9879 {0} \u3002
 
 syncprofile.autodownload_all.name=\u81ea\u52a8\u4e0b\u8f7d\uff08\u5168\u90e8\uff09
-syncprofile.autodownload_friends.name=\u81ea\u52a8\u4e0b\u8f7d\uff08\u597d\u53cb\uff09
 syncprofile.backupsource.name=\u5907\u4efd (\u6e90)
 syncprofile.backuptarget.name=\u5907\u4efd(\u76ee\u6807)
 syncprofile.custom.name=\u81ea\u5b9a\u4e49\u2026\u2026
-syncprofile.leecher.name=\u6587\u4ef6\u4e0b\u8f7d\u8005
-syncprofile.leechreleaser.name=\u6587\u4ef6\u53d1\u5e03\u8005
 syncprofile.manualdownload.name=\u624b\u52a8\u4e0b\u8f7d
 syncprofile.projectwork.name=\u540c\u6b65\u9879\u76ee
 syncprofile.syncpcs.name=\u955c\u50cf
@@ -979,6 +986,8 @@ wizard.projectsync.successjoin=\u4f60\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u9879\
 wizard.projectsync.takepartsync=\u52a0\u5165\u540c\u6b65
 wizard.projectsync.title=\u540c\u6b65\u9879\u76ee
 wizard.sendinvitations.additionaltext=\u9644\u52a0\u4fe1\u606f
+##wizard.sendinvitations.invitationtext=Enter a message for the receiver
+##wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.joinsync=\u52a0\u5165\u955c\u50cf\u65f6\u8981\u6c42\u4f7f\u7528\u9080\u8bf7\u3002
 wizard.sendinvitations.neveruntrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
 wizard.sendinvitations.offline=\u672a\u8fde\u63a5
