--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -139,13 +139,22 @@ dialog.connect.connecting_to={0} \u306b\u63a5\u7d9a\u3092\u8a66\u307f\u3066\u304
 dialog.connection_problem=\u63a5\u7d9a\u306b\u554f\u984c
 ##dialog.customsync.autodownloadfromfriends=Autodownload from friends
 ##dialog.customsync.autodownloadfromother=Autodownload from others
-##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection 
+##dialog.customsync.changedetection_disabled=Change detection disabled
+##dialog.customsync.minutesbetweenscans=(Maximum) minutes until change detection
 ##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 ##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 ##dialog.customsync.syncprofilescombo=Default synchronization profile
 ##dialog.customsync.text=Select default and / or customize synchronization profile
 ##dialog.customsync.title=Choose synchronisation profile
+##dialog.directorychooser.new.description=New directory
+##dialog.directorychooser.new.exists={0}\nalready exists
+##dialog.directorychooser.new.key=N
+##dialog.directorychooser.new.name=New
+##dialog.directorychooser.new.problem=There was a problem creating\n{0}
+##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+##dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=\u81f4\u547d\u7684\u306a\u30a8\u30e9\u30fc
+##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.synchronization.choose=\u540c\u671f\u52d5\u4f5c\u306e\u9078\u629e \u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uff1a
 dialog.synchronization.receive_changes=\u30ea\u30e2\u30fc\u30c8\u306e\u66f4\u65b0\u5909\u66f4\u3092\u30ed\u30fc\u30ab\u30eb\u306b\u53d7\u4fe1
 dialog.synchronization.send_and_receive_changes=\u66f4\u65b0\u5909\u66f4\u3092\u9001\u53d7\u4fe1
@@ -156,8 +165,6 @@ dialog.unable_to_connect_to_address={0} \u306b\u63a5\u7d9a\u3067\u304d\u307e\u30
 dialog.unable_to_connect_to_member={0} \u306b\u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093\u3002
 dialog.unable_to_open_port=\u30ed\u30fc\u30ab\u30eb\u30dd\u30fc\u30c8 {0} \u3092\u958b\u304f\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3002PowerFolder \u304c\u3059\u3067\u306b\u7a3c\u50cd\u4e2d\u306e\u53ef\u80fd\u6027\u304c\u3042\u308a\u307e\u3059\u3002
 dialog.updatecheck.developmentversion.optionrestart=\u518d\u8d77\u52d5
-dialog.updatecheck.developmentversion.text=\nPowerFolder \u306e\u65b0\u3057\u3044\u958b\u767a\u7248\u304c\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3057\u305f\u3002\n\n- \u30d3\u30eb\u30c9\u65e5\u6642 -\n\u672c\u7248\: {0}\n\u65b0\u7248\: {1}\n\nPowerFolder \u3092\u76f4\u3061\u306b\u518d\u8d77\u52d5\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n
-dialog.updatecheck.developmentversion.title=\u65b0\u958b\u767a\u7248
 dialog.updatecheck.downloadAndUpdate=\u76f4\u3061\u306b\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u66f4\u65b0
 dialog.updatecheck.failed.text=\u66f4\u65b0\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u306e\u63a5\u7d9a\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n \nPowerFolder Pro\: \u8a2d\u5b9a\uff0fPro \u8a2d\u5b9a\uff0fPowerFolder Pro \u30ed\u30fc\u30c0 \u306e\u9805\u76ee\u306b\u3042\u308b\n\u66f4\u65b0\u30b5\u30fc\u30d3\u30b9 \u30a2\u30ab\u30a6\u30f3\u30c8\u3082\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 dialog.updatecheck.failed.title=\u66f4\u65b0\u5931\u6557
@@ -395,6 +402,7 @@ general.cancel=\u53d6\u6d88\u3057
 general.cancel.key=C
 general.days={0} \u65e5
 general.description=\u8aac\u660e
+##general.directory=Directory
 general.disconnected=\u672a\u63a5\u7d9a
 general.downloads=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 
 general.estimatedsize=\u6982\u7b97\u30b5\u30a4\u30ba
@@ -431,12 +439,11 @@ general.synchonisation=\u540c\u671f\u65b9\u5f0f
 general.syncprofile=\u540c\u671f\u65b9\u5f0f
 general.time=%02d\:%02d\:%02d
 general.today=\u4eca\u65e5
-##general.transfer.problem=Transfer Problem
-##general.transfer.problems=Transfer Problems
 general.uploads=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 general.user=\u30e6\u30fc\u30b6\u30fc
 general.visibility=\u53ef\u8996\u6027
 general.webservice=\u30aa\u30f3\u30e9\u30a4\u30f3 \u30b9\u30c8\u30ec\u30fc\u30b8
+##general.whatisthis=What is this?
 general.yesterday=\u6628\u65e5
 
 hideoffline.description=\u3053\u306e\u691c\u7d22\u7d50\u679c\u304b\u3089\u30aa\u30d5\u30e9\u30a4\u30f3\u30e6\u30fc\u30b6\u30fc\u3092\u9664\u5916\u3057\u3066\u975e\u8868\u793a 
@@ -669,6 +676,10 @@ preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u753b\u50cf\u30d7\u30ec
 preferences.dialog.silentthrottle=\u30b5\u30a4\u30ec\u30f3\u30c8\u6642\u306e\u5e2f\u57df\u5e45\u306e\u5272\u308a\u5f53\u3066 
 preferences.dialog.silentthrottle.tooltip=\u30b5\u30a4\u30ec\u30f3\u30c8\u30e2\u30fc\u30c9\u6642\u306b\u4f7f\u7528\u3059\u308b\u5e2f\u57df\u5e45\u3092\u8a2d\u5b9a\u3057\u307e\u3059\uff080 \u4ee5\u5916\u306e\u8a2d\u5b9a\u6642\u306e\u307f\u6709\u52b9\uff09
 preferences.dialog.smalltoolbar=\u5c0f\u3055\u3044\u30c4\u30fc\u30eb\u30d0\u30fc\u30a2\u30a4\u30b3\u30f3\u3092\u4f7f\u7528
+##preferences.dialog.startPanel=Start panel
+##preferences.dialog.startPanel.downloads=Downloads
+##preferences.dialog.startPanel.myFolders=My Folders
+##preferences.dialog.startPanel.overview=Overview
 preferences.dialog.startwithwindows=Windows \u3068\u3068\u3082\u306b PowerFolder \u3092\u8d77\u52d5
 preferences.dialog.statusCantResolve=DynDns {0}\: \u540d\u524d\u89e3\u6c7a\u304c\u3067\u304d\u307e\u305b\u3093\uff01
 preferences.dialog.statusDynDnsSuccess=DynDns {0} \u306e\u6709\u52b9\u3092\u78ba\u8a8d\u3057\u307e\u3057\u305f\uff01
@@ -727,6 +738,7 @@ publicfolders.size=\u30b5\u30a4\u30ba
 quickinfo.download.active=\u51e6\u7406\u4e2d\u306e\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 {0}
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u4e86\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9 {0}
 quickinfo.download.title=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u306e\u72b6\u614b
+##quickinfo.folder.disconnected=No other computer connected
 ##quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u307f
 quickinfo.folder.is_synchronizing=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u4e2d...
@@ -747,8 +759,6 @@ quickinfo.root.insync=\u5168\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u307f
 quickinfo.root.offline=\u30aa\u30d5\u30e9\u30a4\u30f3
 quickinfo.root.syncing=\u540c\u671f\u9032\u884c\u4e2d...
 quickinfo.root.title=PowerFolder \u306b\u3088\u3046\u3053\u305d\uff01
-##quickinfo.transfer.problems.detected={0} problem(s) recently detected
-##quickinfo.transfer.problems.title=Transfer Problems Status
 quickinfo.upload.active=\u51e6\u7406\u4e2d\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9 {0}
 quickinfo.upload.title=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u306e\u72b6\u614b
 quickinfo.user.isconnectedinet=\u306f\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u4e0a\u3067\u3059
@@ -757,6 +767,7 @@ quickinfo.user.isdiconnected=\u306f\u5207\u65ad\u3055\u308c\u3066\u3044\u307e\u3
 quickinfo.user.secureconnected=\u5b89\u5168\u306b\u63a5\u7d9a\u6e08\u307f
 quickinfo.webservice.connected=PowerFolder Web\u30b5\u30fc\u30d3\u30b9\u306b\u63a5\u7d9a\u6e08\u307f
 quickinfo.webservice.foldersmirrored={1} \u4e2d {0} \u30d5\u30a9\u30eb\u30c0 \u30d0\u30c3\u30af\u30a2\u30c3\u30d7\u6e08\u307f
+##quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.notconnected=PowerFolder Web\u30b5\u30fc\u30d3\u30b9\u306b\u672a\u63a5\u7d9a
 quickinfo.webservice.notsetup=PowerFolder Web\u30b5\u30fc\u30d3\u30b9\u304c\u672a\u8a2d\u5b9a
 quickinfo.webservice.title=\u30aa\u30f3\u30e9\u30a4\u30f3\u30b9\u30c8\u30ec\u30fc\u30b8 - Web\u30b5\u30fc\u30d3\u30b9
@@ -862,17 +873,13 @@ statusbar.synchronizing=\u540c\u671f\u4e2d...
 synchronisation.notice.title={0} \u540c\u671f\u65b9\u5f0f\u306e\u6709\u52b9\u5316
 synchronisation.warning.automatic_deletions=\u3053\u306e\u30e2\u30fc\u30c9\u3067\u306f\u30d5\u30a1\u30a4\u30eb\u524a\u9664\u3082\u540c\u671f\u3055\u308c\u307e\u3059\uff01\n\u3088\u308d\u3057\u3044\u3067\u3059\u304b \uff1f
 synchronisation.warning.automatic_deletions_notice=\u3053\u306e\u540c\u671f\u5f62\u5f0f\u3067\u306f\u30d5\u30a1\u30a4\u30eb\u524a\u9664\u3082\u540c\u671f\u3057\u307e\u3059\uff01
-synchronisation.warning.automatic_download=\u3053\u306e\u30e2\u30fc\u30c9\u3067\u306f\u30d5\u30a1\u30a4\u30eb\u304c\u81ea\u52d5\u7684\u306b\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3059\uff01\n\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
 synchronisation.warning.explanation={1} \u3078\u306e '{0}' \u540c\u671f\u65b9\u5f0f\u306e\u9069\u7528\u304c\u9078\u629e\u3055\u308c\u307e\u3057\u305f\u3002
 synchronisation.warning.title={1} \u3078\u306e '{0}' \u540c\u671f\u65b9\u5f0f\u306e\u9069\u7528
 
 syncprofile.autodownload_all.name=\u81ea\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\uff08\u5168\u54e1\u304b\u3089\uff09
-syncprofile.autodownload_friends.name=\u81ea\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\uff08\u53cb\u4eba\u304b\u3089\uff09
 syncprofile.backupsource.name=\u30d0\u30c3\u30af\u30a2\u30c3\u30d7\uff08\u30bd\u30fc\u30b9\uff09
 syncprofile.backuptarget.name=\u30d0\u30c3\u30af\u30a2\u30c3\u30d7\uff08\u4fdd\u5b58\u5148\uff09
 syncprofile.custom.name=\u4efb\u610f\u5909\u66f4...
-syncprofile.leecher.name=Torrent \u306e\u53d6\u5f97
-syncprofile.leechreleaser.name=Torrent \u306e\u914d\u5e03
 syncprofile.manualdownload.name=\u624b\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 syncprofile.projectwork.name=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30ef\u30fc\u30af
 syncprofile.syncpcs.name=\u30df\u30e9\u30fc
@@ -907,13 +914,13 @@ title.search.users=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22
 ##transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
 ##transfer.problem.general.exception=There was an Exception\: {0}
 ##transfer.problem.illegal.chunk=Received illegal chunk\: {0}
-##transfer.problem.invalid.part=Received invalid part request\: {0}
+##transfer.problem.invalid.part=Received invalid part request
 ##transfer.problem.io.exception=Unable to read/write\: {0}
 ##transfer.problem.md5.error=There was an MD5-Hash error
 ##transfer.problem.old.upload=Already received download request from {0}
-##transfer.problem.temp.file.delete=Unable to removed broken tempfile {0}
-##transfer.problem.temp.file.open=Unable to create/open tempfile {0}
-##transfer.problem.temp.file.write=Unable to write to tempfile {0}
+##transfer.problem.temp.file.delete=Unable to remove broken tempfile
+##transfer.problem.temp.file.open=Unable to create/open tempfile
+##transfer.problem.temp.file.write=Unable to write to tempfile
 ##transfer.problem.title=File Transfer Problem
 ##transfer.problem.transfer.exception=There was a TransferException\: {0}
 
@@ -927,11 +934,11 @@ transfers.local=\u30ed\u30fc\u30ab\u30eb
 transfers.pending=\u5f85\u6a5f\u4e2d
 transfers.progress=\u9032\u884c\u72b6\u6cc1
 transfers.queued=\u9806\u756a\u5f85\u3061
-##transfers.remotehashing=Waiting for requests
+##transfers.remotehashing=Preparing
 transfers.requested=\u8981\u6c42
 transfers.searching=\u691c\u7d22\u4e2d...
 transfers.to=\u9001\u308a\u5148
-##transfers.verifying=Verifying sync
+##transfers.verifying=Finalizing
 
 unignorefile.description=\u30d5\u30a1\u30a4\u30eb\u3092\u518d\u3073\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3084\u5171\u6709\u306e\u5bfe\u8c61\u306b\u623b\u3059
 unignorefile.key=U
@@ -979,6 +986,8 @@ wizard.projectsync.successjoin=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3078\u6b63\
 wizard.projectsync.takepartsync=\u65e2\u5b58\u306e\u540c\u671f\u306b\u53c2\u52a0\u3059\u308b
 wizard.projectsync.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540c\u671f
 wizard.sendinvitations.additionaltext=\u5099\u8003
+##wizard.sendinvitations.invitationtext=Enter a message for the receiver
+##wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.joinsync=\u30df\u30e9\u30fc\u3078\u306e\u53c2\u52a0\u306b\u306f\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u304c\u5fc5\u8981\u3067\u3059\u3002
 wizard.sendinvitations.neveruntrusted=\u4fe1\u983c\u3067\u304d\u306a\u3044\u4eba\u306b\u306f\u6c7a\u3057\u3066\u62db\u5f85\u72b6\u3092\u6e21\u3055\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
 wizard.sendinvitations.offline=\u672a\u63a5\u7d9a
