--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+folderjoin.invitationtext=Nachricht
 abortcopy.description=Bricht den Kopiervorgang ab
 abortcopy.key=A
 abortcopy.name=Abbrechen
@@ -424,7 +425,7 @@ general.localnet=LAN
 general.member=Benutzer
 general.notavailable=nicht verf\u00fcgbar
 general.notfound=nicht gefunden
-general.notonfriends=Nicht auf Freundesliste
+general.notonfriends=Benutzer finden
 general.ok=OK
 general.ok.key=\u00dc
 general.overwrite=\u00dcberschreiben
@@ -535,8 +536,8 @@ navigationbuttons.up=Hoch
 navigationbuttons.up_to=Hoch zu {0}
 
 navtree.me=Ich
-navtree.node=Benutzer {0}
-navtree.onlinenodes=Verbundene Benutzer ({0})
+navtree.node=Computer {0}
+navtree.onlinenodes=Verbundene Computer ({0})
 navtree.recyclebin_size=Papierkorb ({0})
 navtree.title=Navigation
 
